plugins/htmltools/testData/highlighting/SOEFromRelaxedDescriptor.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>

<<error descr="Wrong root element">h:composition</error> xmlns="http://www.w3.org/1999/xhtml"
      xmlns:h="<error descr="URI is not registered (Settings | Languages & Frameworks | Schemas and DTDs)">http://java.sun.com/jsf/facelets</error>" xmlns:foo="<error descr="URI is not registered (Settings | Languages & Frameworks | Schemas and DTDs)">http://java.sun.com/jsf/composite</error>/<error descr="Cannot resolve library">foo</error>">

<head>    </head>
</<error descr="Wrong root element">h:composition</error>>
